# kin-reference-code-snippets

./: Inspirations.md  README.md
Aly-Portfolio/frontend/: package-lock.json
Aly-Portfolio/frontend/src/: App.css
Aly-Portfolio/my-portfolio/src/: App.jsx  index.css
Guide-Notes/: Ollama-setup-guide.md  UV-setup.md
Local-Models/: README.md  pyproject.toml  run.py  test_connection.ipynb
Neo4j-Example/: README.md  jensen_guide.md
Plan-Do-Agent/: README.md  pyproject.toml
Plan-Do-Agent/src/plan_do_agent/: __init__.py  executor.py  graph.py  main.py  planner.py  state.py  tools.py
RAG-Example/: README.md  infineon_rag_agent.py  pyproject.toml  rag-ingestion-pipeline.ipynb
React-Native/: App.tsx  README.md  app.json  package.json  tsconfig.json
React-Native/src/components/: EmptyState.tsx  ErrorBoundary.tsx  ExpandableCard.tsx  MoodDial.tsx  StatCard.tsx
React-Native/src/constants/: moodScale.ts  storageKeys.ts
React-Native/src/navigation/: RootNavigator.tsx  types.ts
React-Native/src/screens/: AnalyticsScreen.tsx  CalendarScreen.tsx  HomeScreen.tsx  SettingsScreen.tsx
React-Native/src/services/: exportService.ts  notifications.ts  storage.ts
React-Native/src/state/: AppProvider.tsx
React-Native/src/theme/: dynamicColors.ts  materialTheme.ts
React-Native/src/types/: models.ts
React-Native/src/utils/: date.ts
React-RAG-App/: start.bat
React-RAG-App/backend/: README.md  chunker.py  main.py  pyproject.toml  smoke_test.py  vectordb.py
React-RAG-App/frontend/: .gitignore  package-lock.json  package.json
n8n/: setup_guide.md
(+11 files in other folders)
