[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "chromadb>=1.1.1",
    "fastapi>=0.116.1",
    "httpx>=0.27.0",
    "openai>=2.32.0",
    "pymupdf>=1.27.2.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.4.1",
    "uvicorn>=0.35.0",
]
